5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1684_1880.log
== SUBMITION (2019-04-19 13:16:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

if(m<1 and m>12):
    print("numero de mes invalido")
elif(m==1):
    print("janeiro")
elif(m==2):
    print("fevereiro")
elif(m==3):
    print("marco")
elif(m==4):
    print("abril")
elif(m==5):
    print("maio")
elif(m==6):
    print("junho")
elif(m==7):
    print("julho")
elif(m==8):
    print("agosto")    
elif(m==9):
    print("setembro")
elif(m==10):
    print("outubro")
elif(m==11):
    print("novembro")
elif(m==12):
    print("dezembro")
else:
    print("numero de mes invalido")
-- EXECUTION TIME:
0.157487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1880/main.py", line 3, in <module>
    if(m<1 and m>12):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:17:05) 
-- CODE:
m=int(input(":"))

if(m<1 and m>12):
    print("numero de mes invalido")
elif(m==1):
    print("janeiro")
elif(m==2):
    print("fevereiro")
elif(m==3):
    print("marco")
elif(m==4):
    print("abril")
elif(m==5):
    print("maio")
elif(m==6):
    print("junho")
elif(m==7):
    print("julho")
elif(m==8):
    print("agosto")    
elif(m==9):
    print("setembro")
elif(m==10):
    print("outubro")
elif(m==11):
    print("novembro")
elif(m==12):
    print("dezembro")
else:
    print("numero de mes invalido")

-- EXECUTION TIME:
0.129193
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
